[tool.poetry]
name = "app-bootcamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pyjokes = "^0.6.0"
geopy = "^2.2.0"
bs4 = "^0.0.1"
geocoder = "^1.38.1"
yfinance = "^0.1.67"
googletrans = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
